# ai-modeling-verification

./: .gitignore  AGENTS.md  Cargo.toml  Makefile.toml  README.md  spec.md
claudedocs/: README_PROMPTS.md  demo_execution_plan.md  experiment_protocol.md  prompt_model_a_ambiguous.md  prompt_model_b_ambiguous.md  prompt_model_b_precise.md
docs/ambiguous/: prompt_model_a_ambiguous.md  prompt_model_b_ambiguous.md
docs/precise/: prompt_model_a_precise.md  prompt_model_b_precise.md
experiments/run-20251025-231331/worktree/precise-model-b-claude.uYza3V/spec-tests/: Cargo.toml
experiments/run-20251025-231331/worktree/precise-model-b-claude.uYza3V/spec-tests/src/: lib.rs
experiments/run-20251025-231331/worktree/precise-model-b-claude.uYza3V/spec-tests/tests/: acceptance_model_b.rs
modules/model-a-non-avdm/: Cargo.toml
modules/model-a-non-avdm/src/: lib.rs  main.rs  session.rs
modules/model-b-avdm/: Cargo.toml
modules/model-b-avdm/reset/: base.rs
scripts/: model-a-code-reset.sh  model-b-code-reset.sh  run-ambiguous.sh  run-claude-ambiguous.sh  run-claude-preceise.sh  run-preceise.sh  run-precise.sh  run-worktree-all.sh  run-worktree-ambiguous.sh  run-worktree-preceise.sh  run-worktree-precise.sh  wezterm-tail-logs.sh
scripts/lib/: run-session-common.sh  run-worktree-common.sh
slides/: demo.md  package-lock.json  package.json  prompts.md  slides.md  styles.css
slides/components/: global-bottom.vue
spec-tests/src/: adapters.rs  lib.rs
spec-tests/tests/: acceptance.rs  acceptance_model_a.rs  acceptance_model_b.rs  common.rs
(+52 files in other folders)
