[package]
name = "spec-tests"
description = "Acceptance test harness covering spec.md scenarios for model comparison"
version = "0.1.0"
edition = "2024"

[dependencies]
model-a-non-avdm = { path = "../modules/model-a-non-avdm" }
model-b-avdm = { path = "../modules/model-b-avdm" }
time = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }

[lib]
path = "src/lib.rs"
